# Severian

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  hello
compiler/: README.md
compiler/ast/: Cargo.toml  README.md  nodes.rs
compiler/ast/src/: lib.rs
compiler/driver/: Cargo.toml
compiler/driver/src/: lib.rs  main.rs
compiler/driver/tests/: basic_functions.rs  examples.rs  hello.rs  integration_tests.rs  native_example_output.rs
compiler/hir/: Cargo.toml
compiler/hir/src/: lib.rs
compiler/hir/tests/: program.rs
compiler/lexer/: Cargo.toml
compiler/lexer/src/: lib.rs
compiler/lexer/tests/: hello.rs
compiler/lowering/: Cargo.toml
compiler/lowering/src/: lib.rs
compiler/lowering/tests/: hello.rs  printing.rs
compiler/mlir/: Cargo.toml
compiler/mlir/src/: lib.rs
compiler/mlir/tests/: module.rs
compiler/ownership/: Cargo.toml
compiler/ownership/src/: lib.rs
compiler/ownership/tests/: hello.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: lib.rs
compiler/parser/tests/: hello.rs
compiler/semantic/: Cargo.toml
compiler/semantic/src/: lib.rs
compiler/semantic/tests/: decorators.rs  hello.rs
docs/examples/: README.md
docs/examples/00-getting-started/: 01-hello.sev  01-hello.stdout  02-imports.sev
docs/examples/01-values-control/: 00-constants.sev  00-constants.stdout  01-bindings.sev  02-if-while-for.sev  02-if-while-for.stdout  03-basic-functions.sev  (+1 more)
docs/language/: fundamentals.md
editors/vscode/: README.md  language-configuration.json  package.json
tools/: check_docs_examples.sh  check_library.sh
(+136 files in other folders)
